# windows-rs-practice

./: Cargo.toml  README.md  build.rs
docs/: LICENSE.md
module_1/: Cargo.toml  build.rs
module_1/src/: main.rs
module_2/: Cargo.toml  build.rs
module_2/src/: main.rs
src/: main.rs
