[package]
name = "windows-rs-practice"
version = "0.1.0"
authors = ["BeLeap <changseo_jang@korea.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.9.1"
libc = "*"

[build-dependencies]
windows = "0.9.1"